--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,7 @@
     top: 0;
     left: 0;
     display: block;
-    width: 100%;
+    /* width: 100%; */
     margin-bottom: 0;
     /* Override default `<label>` margin */
     line-height: 1.5;
