🖼👍 Add: Local/Static Image added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,8 @@
 }
 
 .bg-image {
-    background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200');
+    /* background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200'); */
+    background-image: url('../images/travel.jpg');
     background-size: cover;
     background-position: center;
 }
