--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,10 @@
     border-radius: 2rem;
 }
 
+label {
+    user-select: none;
+}
+
 .form-label-group {
     position: relative;
     margin-bottom: 1rem;
@@ -45,7 +49,7 @@
     top: 0;
     left: 0;
     display: block;
-    /* width: 100%; */
+    width: 100%;
     margin-bottom: 0;
     /* Override default `<label>` margin */
     line-height: 1.5;
