🗄👍 ADD: User Managment READ / UPDATE with Datables(ServerSide)
Read Users from Database and showed with jQuery Datatable.
Edit Content Function Added, with AJAX.. Server Side

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,3 +137,17 @@ label {
         color: #777;
     }
 }
+
+/* --------------
+-- UMS Page CSS--
+----------------*/
+
+body#user-management {
+    background-color: rgb(161, 161, 161);
+}
+
+
+body#user-management main {
+    margin-top: 95px;
+    padding: 40px 0;
+}
